# ycombinator-jobs-scraper

./: .gitignore  README.md  pyproject.toml
tests/: test_detect.py  test_filter.py  test_normalize.py  test_waas.py
ycombinator_jobs_scraper/: __init__.py  ats.py  cache.py  cli.py  companies.py  normalize.py  scraper.py  waas.py
